monitoring/ingress-resources.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    #certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    #kubernetes.io/tls-acme: “true”
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
  name: omegnet-ingress
  namespace: monitoring
spec:
  rules:
  - host: grafana.varu.local
    http:
      paths:
      - backend:
          serviceName: grafana-service
          servicePort: 8091
  - host: grafana.omegnet.com
    http:
      paths:
      - backend:
          serviceName: grafana-service
          servicePort: 8091
  #tls:
  #- hosts:
  #  - jenkins.omegnet.com
  #  secretName: tls-staging-cert
